css/styles.css
html {
  background: url(../images/background.jpg) black center right/cover fixed no-repeat;
  color: white;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
}

body {
  margin: 0px;
}

header {
  background-color: rgba(0,0,0,0.25);
  height: 100px;
  padding: 0 0 0 20;
}

header > h1 {
  display: inline-block;
  font-family: 'Abril Fatface';
  letter-spacing: 1px;
  font-size: 28pt;
}

header > h5 {
  display: inline-block;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  margin-left: 15px;
}

#nav {
  background-color: rgba(0,0,0,0.25);
  border-top: 1px orange solid;
  border-bottom: 1px rgba(255,255,255,0.25) solid;
  padding: 15px;  
}

#nav > a {
  padding: 15px;
  text-decoration: none;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  color: white;
  background-color: rgba(0,0,0,0.25);
}

#main {
  line-height: 25px;
}

#submit-button {
  margin: 5px 0px 15px 20px;
}

#reset-button {
  margin: 0px 0px 15px 20px;
}

#results {
  margin: 20px;
  font-size: 16pt;
}

footer {
  background-color: rgba(0,0,0,0.25);
  border-top: 1px rgba(255,255,255,0.25) solid;
}

footer > p {
  text-align: right;
  margin-right: 15px;
}

#about {
  margin: 30px;
  padding: 20px;
  background-color: rgba(0,0,0,0.25);
  border-radius: 15px;
}

